tests/fixtures/invalid/pow_int_int_set.py
# Cannot call pow() with Int, Int, Set[int]
x = pow(1, 1, {1, 2, 3})
